<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Player</string>
    <string name="song_info">Song info</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop">Stop</string>
    <string name="action_repeat">Repeat</string>
    <string name="title_activity_song_controller_activy">Now playing</string>
    <string name="song_view">Song view</string>
    <string name="now_playing">Now playing</string>
    <string name="play_pause_toggle">Toggle</string>
    <string name="next_song">Next song</string>
    <string name="previous_song">Previous song</string>
    <string name="title_activity_equalizer">EqualizerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_artists">ArtistsActivity</string>

</resources>