<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amardeep.simpleplayer.component.service.activity.SongListActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_stop"
        android:icon="@drawable/ic_stop_white_24dp"/>
      <item
        android:id="@+id/action_repeat"
        android:orderInCategory="100"
        android:showAsAction="always"
         android:title="@string/action_repeat"
        android:icon="@drawable/ic_repeat_white_24dp"/>

</menu>
